--- a/sites/all/themes/idap/css/global.css
+++ b/sites/all/themes/idap/css/global.css
@@ -171,6 +171,10 @@ body {
 	opacity:0.8;
 }
 
+.float-left {
+	float:left;
+}
+
 .field-name-field-resource-url a:hover, .field-name-field-resource-file a:hover {
 	text-decoration:underline;
 }
